respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Shipment_Line__c.object
<CustomObject>
    <description>Specifies items to be transported as part of a shipment. Child object of Import-Export Cargo Lines</description>
    <fields>
        <fullName>Account_for_Customer__c</fullName>
        <formula>Shipment__r.Account_for__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipment Account for Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Import_Taxes_Amount__c</fullName>
        <label>Additional Import Taxes Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Import_Taxes_Detail__c</fullName>
        <label>Additional Import Taxes Detail</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CE_Descripcion_PAK__c</fullName>
        <formula>Quote_Item_Line__r.CE_Descripcion_de_Producto_PAK__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Descripción PAK</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Fraccion_Arancelaria__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fracción Arancelaria</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo_SAT__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Fraccion Arancelaria</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Shipment Cargo Lines (Fracción Arancelaria)</relationshipLabel>
        <relationshipName>Shipment_Cargo_Lines3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cargo_Por_Tasacion__c</fullName>
        <label>Cargo Por Tasacion</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_DC__c</fullName>
        <label>Category DC</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clave_de_Servicio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clave de Servicio</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo_SAT__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Productos y Servicios cP</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Shipment Cargo Lines</relationshipLabel>
        <relationshipName>Shipment_Cargo_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Container_Name__c</fullName>
        <formula>Container_Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Container Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Container_Number__c</fullName>
        <label>Container Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Container_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Container Type</label>
        <referenceTo>Container_Type__c</referenceTo>
        <relationshipLabel>Shipment Cargo Lines</relationshipLabel>
        <relationshipName>Shipment_Cargo_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate_to_Currency_Header__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Conversion Rate to Currency Header</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Dependent on &quot;Field Order&quot;</inlineHelpText>
        <label>Field Order Line</label>
        <referenceTo>Shopping_Cart_line__c</referenceTo>
        <relationshipLabel>Shipment Cargo Lines</relationshipLabel>
        <relationshipName>Shipment_Items_Lines_Customer_Order_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Order_Price__c</fullName>
        <formula>Customer_Order_Line__r.Net_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Field Order Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field Order</label>
        <referenceTo>Shopping_Cart__c</referenceTo>
        <relationshipLabel>Shipment Cargo Lines</relationshipLabel>
        <relationshipName>Shipment_Items_Lines_Customer_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customs_Incoterm__c</fullName>
        <label>Customs Incoterm</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customs_Value__c</fullName>
        <label>Customs Value</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivered__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Controlled by Deliveries</inlineHelpText>
        <label>Delivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Destination_Amount__c</fullName>
        <description>Conversion to currency of ratio between sum of &quot;Sell Origin Amount&quot;, &quot;Shipment Charges Assigned&quot; and &quot;Total Taxes&quot;, and 1- &quot;Margin at Destination&quot;. Roll-Up from Destination Amount</description>
        <formula>(Sell_Origin_Amount__c +  Shipment_Charges_Assigned_copy__c + Total_Taxes__c)/(1- Margin_at_Destination__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Ratio between total cost amount and 1- &quot;Margin at Destination&quot;</inlineHelpText>
        <label>Destination Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Destination_Amount_header_currency__c</fullName>
        <formula>Destination_Amount__c *  Conversion_Rate_to_Currency_Header__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination Amount (header currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duty__c</fullName>
        <label>Duty</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Embalaje__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Embalaje</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo_SAT__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Tipo de Embalaje</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Shipment Cargo Lines (Embalaje)</relationshipLabel>
        <relationshipName>Shipment_Cargo_Lines2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expense_Amount__c</fullName>
        <label>Expense Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Amount_header_currency__c</fullName>
        <formula>Expense_Amount__c *  Conversion_Rate_to_Currency_Header__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expense Amount (header currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expense_Concept__c</fullName>
        <formula>Supplier_Quote_Line__r.Expense_Concept__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expense Concept</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extension_Item_Name__c</fullName>
        <label>Extension Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Family</label>
        <referenceTo>Product_Family__c</referenceTo>
        <relationshipLabel>Shipment Cargo Lines</relationshipLabel>
        <relationshipName>Shipment_Items_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HS_Code__c</fullName>
        <label>HS Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Export_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Import-Export Quote</label>
        <referenceTo>Customer_Quote__c</referenceTo>
        <relationshipLabel>Shipment Cargo Lines</relationshipLabel>
        <relationshipName>Shipment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Outstanding_Balance__c</fullName>
        <description>Conversion to currency of difference between &quot;Sell Origin Amount&quot; and &quot;Invoiced Amount&quot;, from Invoice Outstanding Balance Roll-Up</description>
        <formula>Sell_Origin_Amount__c - Invoiced_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Difference between &quot;Sell Origin Amount&quot; and &quot;Invoiced Amount&quot;</inlineHelpText>
        <label>Invoice Outstanding Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoiced_Amount__c</fullName>
        <label>Invoiced Amount</label>
        <summarizedField>Invoice_Item_Line__c.Amount_Allocated_Cargo_Line_Currency__c</summarizedField>
        <summaryForeignKey>Invoice_Item_Line__c.Shipment_Item_Line__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Item_Code__c</fullName>
        <formula>Item_Name__r.Sourcing_Item_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Name</label>
        <referenceTo>Sourcing_Item__c</referenceTo>
        <relationshipLabel>Shipment Cargo Lines</relationshipLabel>
        <relationshipName>Shipment_Item_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_Price__c</fullName>
        <label>Item Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_Units_x_Packaging__c</fullName>
        <description>If &quot;Quote Item Line&quot; not blank then &quot;Item Units x Packaging&quot; from &quot;Quote Item Line&quot;, else &quot;Item Units x Packaging&quot; from &quot;Supplier Quote Line&quot;</description>
        <formula>IF(Quote_Item_Line__c &lt;&gt; null , Quote_Item_Line__r.Item_Units_x_Packaging__c, Supplier_Quote_Line__r.Item_Units_x_Packaging__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Units x Packaging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Margin_at_Destination__c</fullName>
        <label>Margin at Destination</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margin_at_Origin__c</fullName>
        <description>Ratio of &quot;Profit&quot; to &quot;Sell Origin Amount&quot;</description>
        <formula>Profit__c /  Sell_Origin_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Ratio of &quot;Profit&quot; to &quot;Sell Origin Amount&quot;</inlineHelpText>
        <label>Margin at Origin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Material_Peligroso__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Material Peligroso</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo_SAT__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Material Peligroso</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Shipment Cargo Lines (Material Peligroso)</relationshipLabel>
        <relationshipName>Shipment_Cargo_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Origin_Buy_Amount__c</fullName>
        <description>Conversion to currency of sum between product of &quot;Unit Origin Buy Price&quot; and &quot;Unit Shipped&quot;, and &quot;Expense Amount&quot;, from Origin Buy Amount Roll-Up</description>
        <formula>(Unit_Origin_Buy_Price__c * Units_Shipped__c) + Expense_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum between product of &quot;Unit Origin Buy Price&quot; and &quot;Unit Shipped&quot;, and &quot;Expense Amount&quot;</inlineHelpText>
        <label>Origin Buy Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Origin_Buy_Amount_header_currency__c</fullName>
        <formula>Origin_Buy_Amount__c * Conversion_Rate_to_Currency_Header__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Origin Buy Amount (header currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outstanding_Balance__c</fullName>
        <description>Conversion to currency of difference between &quot;Origin Buy Amount&quot; and &quot;Total Amount Allocated On Disbursements&quot;</description>
        <formula>Origin_Buy_Amount__c - Total_Amount_Allocated_On_Disbursements__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Difference between &quot;Origin Buy Amount&quot; and &quot;Total Amount Allocated On Disbursements&quot;</inlineHelpText>
        <label>Disbursement Outstanding Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Packaging_Description__c</fullName>
        <description>If &quot;Quote Item Line&quot; not blank then &quot;Packaging Description&quot; from &quot;Quote Item Line&quot;, else &quot;Packaging Description&quot; from &quot;Supplier Quote Line&quot;</description>
        <formula>IF(Quote_Item_Line__c &lt;&gt; null , Quote_Item_Line__r.Packaging_Description__c, Supplier_Quote_Line__r.Packaging_Description__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Packaging Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packaging_Gross_Weight_kg__c</fullName>
        <description>If &quot;Quote Item Line&quot; not blank then &quot;Packaging Gross Weight (Kg)&quot; from &quot;Quote Item Line&quot;, else &quot;Packaging Gross Weight (Kg)&quot; from &quot;Supplier Quote Line&quot;</description>
        <formula>IF(Quote_Item_Line__c &lt;&gt; null , Quote_Item_Line__r.Packaging_Gross_Weight_kg__c, Supplier_Quote_Line__r.Packaging_Gross_Weight_kg__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Packaging Gross Weight (kg)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packaging_Height_cm__c</fullName>
        <description>Number conversion of field in: if &quot;Quote Item Line&quot; not blank then &quot;Packaging Height (cm)&quot; from &quot;Quote Item Line&quot;, else &quot;Packaging Height (cm)&quot; from &quot;Supplier Quote Line&quot;</description>
        <formula>IF(Quote_Item_Line__c &lt;&gt; null , Quote_Item_Line__r.Packaging_Height_cm__c, Supplier_Quote_Line__r.Packaging_Height_cm__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Packaging Height (cm)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packaging_Length_cm__c</fullName>
        <description>Number conversion of field in: if &quot;Quote Item Line&quot; not blank then &quot;Packaging Length (cm)&quot; from &quot;Quote Item Line&quot;, else &quot;Packaging Length (cm)&quot; from &quot;Supplier Quote Line&quot;</description>
        <formula>IF(Quote_Item_Line__c &lt;&gt; null , Quote_Item_Line__r.Packaging_Length_cm__c, Supplier_Quote_Line__r.Packaging_Length_cm__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Packaging Length (cm)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packaging_Quantity__c</fullName>
        <description>Number conversion of field in: if &quot;Quote Item Line&quot; not blank then &quot;Packaging Quantity&quot; from &quot;Quote Item Line&quot;, else &quot;Packaging Quantity&quot; from &quot;Supplier Quote Line&quot;</description>
        <formula>IF(Quote_Item_Line__c &lt;&gt; null , Quote_Item_Line__r.Packaging_Quantity__c, Supplier_Quote_Line__r.Packaging_Quantity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Packaging Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packaging_Volume_m3__c</fullName>
        <description>Number conversion of field in: if &quot;Quote Item Line&quot; not blank then &quot;Packaging Volume (m3))&quot; from &quot;Quote Item Line&quot;, else &quot;Packaging Volume (m3)&quot; from &quot;Supplier Quote Line&quot;</description>
        <formula>IF(Quote_Item_Line__c &lt;&gt; null , Quote_Item_Line__r.Packaging_Volume_m3__c, Supplier_Quote_Line__r.Packaging_Volume_m3__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Packaging Volume (m3)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packaging_Weight_kg__c</fullName>
        <description>Number conversion of field in: if &quot;Quote Item Line&quot; not blank then &quot;Packaging Weight (Kg)&quot; from &quot;Quote Item Line&quot;, else &quot;Packaging Weight (Kg)&quot; from &quot;Supplier Quote Line&quot;</description>
        <formula>IF(Quote_Item_Line__c &lt;&gt; null , Quote_Item_Line__r.Packaging_Weight_kg__c, Supplier_Quote_Line__r.Packaging_Weight_kg__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Packaging Weight (kg)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packaging_Width_cm__c</fullName>
        <description>Number conversion of field in: if &quot;Quote Item Line&quot; not blank then &quot;Packaging Width (cm)&quot; from &quot;Quote Item Line&quot;, else &quot;Packaging Width (cm)&quot; from &quot;Supplier Quote Line&quot;</description>
        <formula>IF(Quote_Item_Line__c &lt;&gt; null , Quote_Item_Line__r.Packaging_Width_cm__c, Supplier_Quote_Line__r.Packaging_Width_cm__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Packaging Width (cm)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pallet_Code__c</fullName>
        <label>Pallet Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pedimento__c</fullName>
        <label>Pedimento</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Duty__c</fullName>
        <label>Percent Duty</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Taxes__c</fullName>
        <label>Percent Taxes</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Peso_Neto__c</fullName>
        <label>Peso Neto</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Item_DC__c</fullName>
        <label>Product Item DC</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profit__c</fullName>
        <description>Conversion to currency of difference between &quot;Sell Origin Amount&quot; and &quot;Origin Buy Amount&quot;, from Profit Roll-Up</description>
        <formula>Sell_Origin_Amount__c - Origin_Buy_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Destination_Price__c</fullName>
        <description>Conversion to currency of &quot;Unit Destination Price&quot; from &quot;Quote Item Line&quot;</description>
        <formula>Quote_Item_Line__r.Unit_Destination_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Destination Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Item_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Cargo Line</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Quote_Item_Line__c.Import_Export_Quote__c</field>
                <operation>equals</operation>
                <valueField>$Source.Import_Export_Quote__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Quote_Item_Line__c</referenceTo>
        <relationshipLabel>Shipment Cargo Lines</relationshipLabel>
        <relationshipName>Shipment_Items_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Origin_Price__c</fullName>
        <description>Conversion to currency of &quot;Price&quot; from &quot;Quote Item Line&quot;</description>
        <formula>Quote_Item_Line__r.Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Origin Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Received__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Controlled by Stock Entries</inlineHelpText>
        <label>Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPCL_Item_Height__c</fullName>
        <formula>Item_Name__r.Master_Box_Height_cm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Height(cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPCL_Item_Lenght_cm__c</fullName>
        <formula>Item_Name__r.Master_Box_Length_cm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Lenght(cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPCL_Item_Volume_m3__c</fullName>
        <formula>Item_Name__r.Master_Box_Volume_m3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Volume(m3)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPCL_Item_Width_cm__c</fullName>
        <formula>Item_Name__r.Master_Box_Width_cm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Width(cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_number__c</fullName>
        <formula>Shipment__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SP number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <label>Sales Tax</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sell_Origin_Amount__c</fullName>
        <description>Conversion to currency of product between &quot;Unit Origin Sell Price&quot; and &quot;Units Shipped&quot;, from Sell Origin Amount Roll-Up</description>
        <formula>Unit_Origin_Sell_Price__c   *   Units_Shipped__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Unit Origin Sell Price&quot; x &quot;Units Shipped&quot;</inlineHelpText>
        <label>Origin Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sell_Origin_Amount_header_currency__c</fullName>
        <description>Product of &quot;Sell Origin Amount&quot; and &quot;Conversion Rate to Currency Header&quot;</description>
        <formula>Sell_Origin_Amount__c *  Conversion_Rate_to_Currency_Header__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sell Origin Amount (header currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipment_Carrier__c</fullName>
        <formula>Shipment__r.Carrier__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipment Carrier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Charges_Assigned__c</fullName>
        <description>Conversion to currency of product between ratio of: products between; if &quot;Total Volume (m3)&quot; from &quot;Shipment&quot; greater than 0 then ratio of &quot;Shipping Volume (m3)&quot; to &quot;Total Volume (m3)&quot; from &quot;Shipment&quot;, else ratio of &quot;Shipping Weight (Kg)&quot; to &quot;Total Weight (Kg)&quot; from &quot;Shipment&quot;, and &quot;Total Services Sell Amount&quot; from &quot;Shipment&quot;: to &quot;Conversion Rate to Currency Header&quot;</description>
        <formula>IF( Shipment__r.Total_Volume_m3__c &gt;0, Shipping_Volume_m3__c / Shipment__r.Total_Volume_m3__c , Shipping_Weight_Kg__c /  Shipment__r.Total_Weight_Kg__c) * Shipment__r.Total_Services_Sell_Amount_number__c / Conversion_Rate_to_Currency_Header__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipment Charges Assigned</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipment_Charges_Assigned_copy__c</fullName>
        <label>Shipment Charges Assigned (copy)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipment_Consolidation_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Dependent on &quot;Shipment&quot;</inlineHelpText>
        <label>Shipment Consolidation Data</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Shipment_Consolidation_Data__c.Shipment__c</field>
                <operation>equals</operation>
                <valueField>$Source.Shipment__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Shipment_Consolidation_Data__c</referenceTo>
        <relationshipLabel>Shipment Cargo Lines</relationshipLabel>
        <relationshipName>Shipment_Items_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipment_CreateDate__c</fullName>
        <formula>TEXT(Shipment__r.CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipment CreateDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Mode__c</fullName>
        <formula>Shipment__r.Mode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipment Mode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Route__c</fullName>
        <formula>Shipment__r.Route__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipment Route</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Status__c</fullName>
        <formula>TEXT(Shipment__r.Shipment_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment__c</fullName>
        <label>Shipment</label>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipLabel>Shipment Cargo Lines</relationshipLabel>
        <relationshipName>Shipment_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Shipment_number__c</fullName>
        <formula>Shipment__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipment number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Surface_m2__c</fullName>
        <label>Shipping Surface (m2)</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipping_Volume_m3__c</fullName>
        <label>Shipping Volume (m3)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipping_Weight_Kg__c</fullName>
        <label>Peso bruto (Kg)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SpTEUS__c</fullName>
        <label>TEUS(Sp)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subcategory_DC__c</fullName>
        <label>Subcategory DC</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subfamily__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Dependent on &quot;Family&quot;</inlineHelpText>
        <label>Subfamily</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Subfamily__c.Product_Family__c</field>
                <operation>equals</operation>
                <valueField>$Source.Family__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Subfamily__c</referenceTo>
        <relationshipLabel>Shipment Cargo Lines</relationshipLabel>
        <relationshipName>Shipment_Items_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier_Item_Weight_kg__c</fullName>
        <formula>IF(Quote_Item_Line__c &lt;&gt; null , Quote_Item_Line__r.Supplier_Item_Weight_kg__c,  Supplier_Quote_Line__r.Supplier_Item_Weight_kg__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier Item Weight (kg)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplier_Quote_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Quote/Order Line</label>
        <referenceTo>Supplier_Quote_Line__c</referenceTo>
        <relationshipLabel>Shipment Cargo Lines</relationshipLabel>
        <relationshipName>Shipment_Items_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier_Quote_Price__c</fullName>
        <formula>Supplier_Quote_Line__r.Net_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier Quote/Order Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Supplier_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Quote/Order</label>
        <referenceTo>Supplier_Quote__c</referenceTo>
        <relationshipLabel>Shipment Cargo Lines</relationshipLabel>
        <relationshipName>Shipment_Items_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier_Total_Volume_m3__c</fullName>
        <formula>IF(Quote_Item_Line__c &lt;&gt; null , Quote_Item_Line__r.Supplier_Total_Volume_m3__c, IF(Supplier_Quote_Line__c &lt;&gt; null, Supplier_Quote_Line__r.Supplier_Total_Volume_m3__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier Total Volume (m3)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
</CustomObject>